# Fively

./: README.md
src/authservice/: Dockerfile  docker-compose.yml  pyproject.toml
src/authservice/src/: main.py
src/authservice/src/api/: api.py
src/authservice/src/api/endpoint/: authentication.py
src/authservice/src/schema/: user.py
src/authservice/tests/: test_authservice.py
src/catalogservice/: docker-compose.yml  pyproject.toml
src/catalogservice/src/: main.py
src/catalogservice/src/api/: catalog_upload.py
src/catalogservice/src/crud/: crud_categories.py  crud_options.py  crud_options_value.py  crud_product_sku.py  crud_products.py  crud_sku_values.py
src/catalogservice/src/database/: database.py
src/catalogservice/src/models/: options.py  options_value.py  product.py  product_categories.py  product_sku.py  sku_values.py
src/catalogservice/tests/: test_src.py
